# new_post_notif

./: .gitignore  diff_recognizer.ipynb  general_use_scraper_for_forums.ipynb  pattern_finder.ipynb  pyproject.toml  result_to_MySQL.ipynb  selenium_get_page_temp.ipynb  selenium_tutorial.ipynb  semi-unique_css_selector.ipynb  target_urls_checker.ipynb
